url added to resource

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
           sean extendidas según tus necesidades.
         </p>
         <p>
-          <a class="btn btn-info btn-lg" href="{{ "/docs/home/" | prepend: site.baseurl }}" role="button">Leer más</a>
+          <a class="btn btn-info btn-lg" href="{{ "/docs/resources/products/" | prepend: site.baseurl }}" role="button">Leer más</a>
         </p>
     </div>
 </div>
