--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: default
         </p>
       <!-- </blockquote> -->
     </div>
-    <img src="img/multinexo-tip.png" alt="" class="img-responsive flex-30">
+    <img src="{{ site.tip_image }}" alt="" class="img-responsive flex-30">
   </div>
 </div>
 
