js files fix & products url removed

--- a/site/index.html
+++ b/site/index.html
@@ -9,7 +9,7 @@ layout: default
       sean extendidas según tus necesidades.
     </p>
     <p>
-      <a class="mdl-button mdl-js-button" href="{{ "/docs/resources/products/" | prepend: site.baseurl }}" role="button">Leer más</a>
+      <a class="mdl-button mdl-js-button" href="{{ "/docs/resources/" | prepend: site.baseurl }}" role="button">Leer más</a>
     </p>
   </div>
 </div>
